<resources>
    <string name="app_name">SubwayApp</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="principal">Principal</string>
    <string name="promo">Promociones</string>
    <string name="lig">Los ligeros</string>
    <string name="sanduches">Sánduches</string>
    <string name="user">Usuario</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="repeat">Repetir contraseña</string>
    <string name="sex">Ingrese el sexo:</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="ingresar">Ingresar</string>
    <string name="sesion">Cerrar sesión</string>
    <string name="date">Ingrese la fecha de nacimiento:</string>
    <string name="register"><u>Registrarse</u></string>
    <string name="config">Configuración</string>

    <string name="abierto">Open navigation drawer</string>
    <string name="cerrado">Close navigation drawer</string>

    <!-- Sub Ligeros-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="light1">Jamón</string>
    <string name="text1">¡Delicioso! Así es este increíble SUB tradicional de exquisitas rebanadas de jamón combinadas con tu
        selección de vegetales favoritos. Ponte tu estilo con salsas que más te gustan.
        ¡Pídelo en nuestro pan recién horneado!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="light2">Pavo y Jamón</string>
    <string name="text2">!Dos en un mismo sub! Pide hoy esta deliciosa combinación de pechuga de pavo
    con exquisitas rebanadas de jamón. Agrégale tu selección de verduras y salsas favoritas en nuestro pan recién
    horneado</string>

    <string name="light3">Pechuga de pavo</string>
    <string name="text3">¡Atrévete con este exquisito clásico de pavo! Deliciosas rebanadas de pechuga de pavo estilo gourmet en nuestro pan recién horneado.
        Ponle tu toque con los vegetales y salsas favoritos, disfruta de esta increíble combinación en tu boca.</string>

    <string name="info">Información nutricional</string>
    <string name="calorias">Calorías</string>
    <string name="grasa">Grasa total (g)</string>
    <string name="colest">Colesterol (mg)</string>
    <string name="Carbohidratos">Carbohidratos (g)</string>
    <string name="protein">Proteína (g)</string>

    <!-- Sub Normales-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sub1">Atún</string>
    <string name="texts1">¡Un clásico con fans en todo el mundo! Delicioso atún seleccionado de la más alta calidad mezclado           con mayonesa.
        Ponle tu estilo con los vegetales que más te gustan servido en nuestro pan tostadito y recién horneado.</string>

    <string name="sub2">Italianíssimo</string>
    <string name="texts2">¡Deliciosísimo! Pruébalo hoy y vive esta exquisita combinación que se derrite en tu boca. Rebanadas de pepperoni y salami estilo génova con queso derretido.
        Pídelo tostadito en nuestro pan recién horneado con los vegetales y salsas que más te gustan.</string>

    <string name="sub3">Italiano B.M.T</string>
    <string name="texts3">¡Molto delizioso! Pide en tu próxima visita este increíble SUB con salami rebanado estilo génova, pepperoni y jamón, ponle tu toque añadiéndole
        Vegetales, tu queso favorito y salsas que quieras. ¡Haz que tu paladar viaje a Italia!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
